--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -5,16 +5,13 @@ channels:
 dependencies:
   # Jupyter
   - jupyterlab=2.1.3
-  - nodejs=11
-  - widgetsnbextension=3.5
+  - nodejs
+  - widgetsnbextension
   # Python kernel
   - altair=4
   - altair_saver
-  - beautifulsoup4=4.9
-  - h5py=2.10
   - ipywidgets=7.5
-  - matplotlib-base=3.2
-  - numba=0.48
+  - matplotlib
   - numpy
   - pandas=1
   - pandas-profiling
@@ -22,11 +19,11 @@ dependencies:
   - pillow
   - python=3.7
   - rise
-  - scikit-image=0.16
-  - scikit-learn=0.23
-  - scipy=1.4
-  - seaborn=0.10
-  - statsmodels=0.11
-  - sympy=1.5
+  - scikit-image
+  - scikit-learn
+  - scipy
+  - seaborn
+  - statsmodels
+  - sympy
   - vega_datasets
-  - xlrd=1.2
+  - xlrd
