--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -10,17 +10,21 @@ dependencies:
   # Python kernel
   - altair=4
   - altair_saver
-  - ipywidgets=7.5
-  - matplotlib
+  - beautifulsoup4=4.9
+  - geopandas
+  - h5py
+  - ipywidgets
+  - matplotlib-base
+  - numba
   - numpy
-  - pandas=1
+  - pandas
   - pandas-profiling
   - pip
   - pillow
   - python=3.7
   - rise
   - scikit-image
-  - scikit-learn
+  - scikit-learn=0.23
   - scipy
   - seaborn
   - statsmodels
